<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/update_title"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:gravity="center"
        android:text="@string/update_content"
        android:textSize="17sp"
        android:layout_width="260dp"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/update_btn"
            android:text="@string/update"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/cancel_btn"
            android:text="@string/update_later"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>