<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGrayColor">

    <LinearLayout
        android:id="@+id/closeKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar" />

        <RelativeLayout style="@style/editLinearStyle">

            <TextView
                android:id="@+id/text0"
                style="@style/editLeftImgStyle"
                android:gravity="left"
                android:minWidth="85dip"
                android:text="@string/oldPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                style="@style/line_v_style"
                android:layout_marginBottom="7dip"
                android:layout_marginTop="7dip"
                android:layout_toRightOf="@id/text0" />

            <EditText
                android:id="@+id/inputOldPassword"
                style="@style/editStyle"
                android:layout_toRightOf="@id/text0"
                android:hint="@string/inputPass1"
                android:inputType="textPassword"
                android:maxLength="15" />
        </RelativeLayout>

        <RelativeLayout style="@style/editLinearStyle">

            <TextView
                android:id="@+id/text1"
                style="@style/editLeftImgStyle"
                android:gravity="left"
                android:minWidth="85dip"
                android:text="@string/newPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                style="@style/line_v_style"
                android:layout_marginBottom="7dip"
                android:layout_marginTop="7dip"
                android:layout_toRightOf="@id/text1" />

            <EditText
                android:id="@+id/inputPasswordOne"
                style="@style/editStyle"
                android:layout_toRightOf="@id/text1"
                android:hint="@string/inputPass1"
                android:inputType="textPassword"
                android:maxLength="15" />
        </RelativeLayout>

        <RelativeLayout style="@style/editLinearStyle">

            <TextView
                android:id="@+id/text2"
                style="@style/editLeftImgStyle"
                android:gravity="center"
                android:minWidth="85dip"
                android:text="@string/confirmPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                style="@style/line_v_style"
                android:layout_marginBottom="7dip"
                android:layout_marginTop="7dip"
                android:layout_toRightOf="@id/text2" />

            <EditText
                android:id="@+id/inputPasswordTwo"
                style="@style/editStyle"
                android:layout_toRightOf="@id/text2"
                android:hint="@string/inputPass2"
                android:inputType="textPassword"
                android:maxLength="15" />
        </RelativeLayout>

        <Button
            android:id="@+id/confirm"
            style="@style/btnStyle"
            android:enabled="false"
            android:text="@string/confirmUpdate" />
    </LinearLayout>

</ScrollView>