<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGrayColor">

    <LinearLayout
        android:id="@+id/closeKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/include_toolbar" />

        <RelativeLayout style="@style/editLinearStyle">

            <ImageView
                android:id="@+id/img1"
                style="@style/editLeftImgStyle"
                android:contentDescription="@null"
                android:src="@drawable/icon_phone" />

            <View
                android:id="@+id/view2"
                style="@style/line_v_style"
                android:layout_marginBottom="7dip"
                android:layout_marginTop="7dip"
                android:layout_toEndOf="@id/img1"
                android:layout_toRightOf="@id/img1" />

            <EditText
                android:id="@+id/inputPhone"
                style="@style/editStyle"
                android:layout_toEndOf="@id/img1"
                android:layout_toLeftOf="@+id/getCode"
                android:layout_toRightOf="@id/img1"
                android:layout_toStartOf="@+id/getCode"
                android:hint="@string/inputPhone"
                android:inputType="phone"
                android:maxLength="15" />

            <Button
                android:id="@+id/getCode"
                style="@style/btnStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="7dip"
                android:layout_marginTop="7dip"
                android:minWidth="90dip"
                android:padding="0dip"
                android:text="@string/getCode"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout style="@style/editLinearStyle">

            <ImageView
                android:id="@+id/img2"
                style="@style/editLeftImgStyle"
                android:contentDescription="@null"
                android:src="@drawable/icon_code" />

            <View
                style="@style/line_v_style"
                android:layout_marginBottom="7dip"
                android:layout_marginTop="7dip"
                android:layout_toEndOf="@id/img2"
                android:layout_toRightOf="@id/img2" />

            <EditText
                android:id="@+id/inputCode"
                style="@style/editStyle"
                android:layout_toEndOf="@id/img2"
                android:layout_toRightOf="@id/img2"
                android:hint="@string/inputCode"
                android:inputType="phone"
                android:maxLength="4" />
        </RelativeLayout>

        <RelativeLayout style="@style/editLinearStyle">

            <TextView
                android:id="@+id/text1"
                style="@style/editLeftImgStyle"
                android:gravity="center"
                android:minWidth="85dip"
                android:text="@string/newPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                style="@style/line_v_style"
                android:layout_marginBottom="7dip"
                android:layout_marginTop="7dip"
                android:layout_toEndOf="@id/text1"
                android:layout_toRightOf="@id/text1" />

            <EditText
                android:id="@+id/inputPasswordOne"
                style="@style/editStyle"
                android:layout_toEndOf="@id/text1"
                android:layout_toRightOf="@id/text1"
                android:hint="@string/inputPass1"
                android:inputType="textPassword"
                android:maxLength="15" />
        </RelativeLayout>

        <RelativeLayout style="@style/editLinearStyle">

            <TextView
                android:id="@+id/text2"
                style="@style/editLeftImgStyle"
                android:gravity="center"
                android:minWidth="85dip"
                android:text="@string/confirmPassword"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <View
                style="@style/line_v_style"
                android:layout_marginBottom="7dip"
                android:layout_marginTop="7dip"
                android:layout_toEndOf="@id/text2"
                android:layout_toRightOf="@id/text2" />

            <EditText
                android:id="@+id/inputPasswordTwo"
                style="@style/editStyle"
                android:layout_toEndOf="@id/text2"
                android:layout_toRightOf="@id/text2"
                android:hint="@string/inputPass2"
                android:inputType="textPassword"
                android:maxLength="15" />
        </RelativeLayout>

        <Button
            android:id="@+id/confirm"
            style="@style/btnStyle"
            android:enabled="false"
            android:text="@string/confirmUpdate" />
    </LinearLayout>

</ScrollView>